--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,3 @@
-#container {
-    background-color: aqua;
-    color: black;
-    height: 100px;
-    width: 400px;
+.hide-me {
+    display: none;
 }
