--- a/css/navbar.css
+++ b/css/navbar.css
@@ -13,7 +13,7 @@ header > nav {
     height: var( --navbar-height);
     padding: 0 var( --global-horizontal-padding);
     box-sizing: border-box;
-    background-color: cadetblue;
+    background-color: lightblue;
     border-bottom: 1px solid var( --border-color);
 }
 
